css/styles.css
/* ... */
#hero .qotd p {
  font-size: var(--fs-body);
  font-weight: var(--fw-light);
  font-style: italic;
}

#hero .qotd figcaption {
  font-size: var(--fs-body);
  font-weight: var(--fw-regular);
}

#hero #press-start-container {
  display: grid;
  place-items: center;
}

#hero #press-start-container p {
  font-style: italic;
  font-family: var(--ff-accent);

  font-size: max(0.75rem, calc(var(--fs-press-start) - 0.18rem));
  font-weight: var(--fw-bold-700);
  opacity: 0.38;
  padding-right: 5.5vw;
}

#hero #press-start-btn {
  font-family: var(--ff-pixelated);
  margin: 0 auto;
  letter-spacing: 1px;
  font-size: var(--fs-press-start);
  color: var(--clr-body-primary);
  text-shadow: var(--ts-clr-match);
  transition: transform 0.3s ease-in;
  width: max-content;

  animation: press-start 0.8s linear alternate infinite;
  -webkit-animation: press-start 0.8s linear alternate infinite;
}

#hero #press-start-btn:hover {
  animation: press-start 0.33s linear alternate infinite, press-start-hover 0.55s ease-out forwards;
  -webkit-animation: press-start 0.33s linear alternate infinite, press-start-hover 0.55s ease-out forwards;
  filter: unset;
}

#hero #press-start-btn ~ p {
  transition: opacity 0.38s ease-out;

  -webkit-user-select: none; /* Safari */        
  -moz-user-select: none; /* Firefox */
  -ms-user-select: none; /* IE10+/Edge */
  user-select: none; /* Standard */
}

#hero #press-start-btn:hover ~ p {
  opacity: 0;
  /* pointer-events: none; */
}

#key-hole {
  position: fixed;
  top: 33px;
  right: 0;

  filter: saturate(0) drop-shadow(0 0 8px white);
  height: 43px;
}

nav {  
  position: sticky;
  top: -1px;

  display: grid;
  place-items: center;

  height: 111px;
  width: 100vw;
  pointer-events: none;

  transition: all 0.38s ease-in-out;

  z-index: 3;
}

nav #key {
  display: grid;
  place-items: center;
  
  height: 100%;
  width: 100%;
  overflow-x: hidden;

  transition: all 0.38s ease-in-out;
}

nav #key img {
  cursor: pointer;
  pointer-events: auto;

  filter: drop-shadow(0 0 13px var(--clr-body-primary));
  opacity: 1;
  width: 11rem;
}

nav #key.nav-toggle img {
  animation: key-jingle 0.38s linear alternate infinite;
  -webkit-animation: key-jingle 0.38s linear alternate infinite;
  
  transition: all 0.38s ease-in-out;
}

nav #key img:hover {
  animation: key-hover 7.77s linear infinite;
  -webkit-animation: key-hover 7.77s linear infinite;
  
  transform: scale(1.1);
} 

nav #key.nav-toggle.open img {
  animation: key 0.8s linear alternate forwards;
  -webkit-animation: key 0.8s linear alternate forwards;
}

nav.is-pinned #key img {
  opacity: 0.7;
  transition: opacity 0.38s ease-in;

  animation: none;
} 

nav.is-pinned #key img:hover {
  opacity: 1;
  animation: key-jingle 0.38s linear alternate infinite;
  -webkit-animation: key-jingle 0.38s linear alternate infinite;
} 

nav.is-pinned #key.nav-toggle.open img {
  opacity: 1;
  animation: key 0.8s linear alternate forwards;
  -webkit-animation: key 0.8s linear alternate forwards;
}

/* keyAnimation */
nav .nav-toggle.open img {
  animation: key 0.8s linear alternate forwards;
  -webkit-animation: key 0.8s linear alternate forwards;
}

nav #nav-ul-wrapper {
  position: absolute;
  top: 111px;
  right: 0;
  
  opacity: 0;
  visibility: hidden;
  
  transition: all 0.38s 0.28s ease-in-out;
}

nav .nav-toggle.open ~ #nav-ul-wrapper {
  opacity: 1;
  visibility: visible;
}

nav #nav-ul-wrapper ul {
  position: relative;

  display: grid;
  justify-items: end;
  gap: 18px;
  
  border: 3px ridge var(--clr-silver-surfer);
  border-right: none;
  border-top-left-radius: 111px;

  border-bottom-left-radius: 55px;
  border-bottom-right-radius: 33px;
  list-style-type: none;
  padding: 18px 0 18px 18px;
  z-index: 1;
}

/* navBG */
nav #nav-ul-wrapper ul::before {
  content: '';

  position: absolute;
  inset: 0;
  pointer-events: auto;

  background: linear-gradient(to top left, black, black, rgb(111, 111, 111));
  border-top-left-radius: 111px;
  border-bottom-left-radius: 55px;
  border-bottom-right-radius: 33px;
  opacity: 0.7;

  z-index: 0;
} 

/* navBoxShadow */
nav #nav-ul-wrapper ul::after {
  position: absolute;
  inset: 0;

  content:'';

  border-top-left-radius: 111px;
  border-bottom-right-radius: 33px;
  border-bottom-left-radius: 55px;
  box-shadow: 0 0 21px 3px white;

  z-index: 0;
}

nav #nav-ul-wrapper a {
  position: relative;
  pointer-events: auto;

  border-top-left-radius: 30px;
  border-bottom-left-radius: 30px;
  box-shadow: 0 0 18px white , inset 0 0 10px black;
  /* toRemoveRightBoxShadowOverflow */
  clip-path: inset(-100px 0px -100px -100px);
  font-family: var(--ff-nav);
  font-size: var(--fs-nav);
  letter-spacing: 1px;
  padding: 11px 5px 11px 21px;
  text-shadow: var(--ts-clr-match);

  transition: transform 100ms ease-in-out;

  z-index: 1;
}

nav #nav-ul-wrapper li:nth-of-type(1) a {
  color: var(--clr-neon-red);
}

nav #nav-ul-wrapper li:nth-of-type(2) a {
  color: var(--clr-neon-orange);
}

nav #nav-ul-wrapper li:nth-of-type(3) a {
  color: var(--clr-neon-blue);
}

nav #nav-ul-wrapper li:nth-of-type(4) a {
  color: var(--clr-neon-pink);
}

nav #nav-ul-wrapper a:hover {
  opacity: 0.88;
  transform: rotateX(21deg);
}

nav #nav-ul-wrapper a::before {
  position: absolute;
  inset: 0;

  content: '';

  background: linear-gradient(to right, rgb(211, 211, 211), black, black);
  border-top-left-radius: 30px;
  border-bottom-left-radius: 30px;
  box-shadow: 0 0 8px 5px;
  opacity: 0.7;

  z-index: -1;
}

nav #nav-ul-wrapper a:hover::before {
  opacity: 0.88;
}

nav #nav-ul-wrapper li:nth-of-type(4) a {
  border-bottom-right-radius: 33px;
}

nav #nav-ul-wrapper li:nth-of-type(4) a::before {
  border-bottom-right-radius: 33px;
}

#about {
  position: relative;
}

#about .section-header-container h3::before {
  box-shadow: 0 0 1em var(--clr-neon-orange);
}
/* ... */

